--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "webedit/home",
     "require": {
         "webedit/core": "dev-master",
-        "webedit/application": "dev-master",
-        "webedit/translation": "dev-master"
+        "webedit/application": "dev-master"
     },
     "autoload": {
         "psr-4": {
