--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "webedit/home",
     "type": "webedit-module",
     "extra": {
-        "extension": "WebEdit\\Home\\Extension"
+        "extensions": {
+            "home": "WebEdit\\Home\\Extension"
+        }
     },
     "require": {
         "webedit/bootstrap": "dev-master",
