--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "webedit/bootstrap": "dev-master",
+        "webedit/module": "dev-master",
         "webedit/routing": "dev-master",
         "webedit/front": "dev-master",
         "webedit/admin": "dev-master"
