--- a/locale/home.cs_CZ.neon
+++ b/locale/home.cs_CZ.neon
@@ -1,4 +1,5 @@
 admin:
-    view: Administrace
-front:
-    view: Titulní strana
+    presenter:
+        module: Administrace
+presenter:
+    module: Titulní strana
