--- a/locale/home.en_US.neon
+++ b/locale/home.en_US.neon
@@ -1,4 +1,5 @@
 admin:
-    view: Administration
-front:
-    view: Homepage
+    presenter:
+        module: Administration
+presenter:
+    module: Homepage
