--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "ytnuk/home",
 	"type": "ytnuk-module",
 	"require": {
+		"ytnuk/module": "dev-master",
 		"ytnuk/web": "dev-master"
 	},
 	"autoload": {
