--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
 	"name": "ytnuk/home",
+	"extra": {
+		"extensions": {
+			"ytnuk/home": "Ytnuk\\Home\\Extension"
+		}
+	},
 	"require": {
 		"ytnuk/web": "dev-master"
 	},
